--- a/Введение.html
+++ b/Введение.html
@@ -55,10 +55,10 @@
                         <a href="Ход операции.html" class="nav-link">Ход боевых действий</a>
                     </li>
                     <li class="nav-item">
-                        <a href="*" class="nav-link">Мемуары и фотографии</a>
+                        <a href="67 Армия.html">67 Армия</a>
                     </li>
                     <li class="nav-item">
-                        <a href="*" class="nav-link">Итоги операции и схемы</a>
+                        <a href="Итоги.html" class="nav-link">Итоги операции</a>
                     </li>
                     <li class="nav-item">
                         <a href="*" class="nav-link">Список литературы</a>
@@ -173,6 +173,7 @@
                 <u>Передовые отряды 43-ей армии</u> - Афанасий Павлантьевич Белобородов;<br>
                 <u>39-ой армией 3-го Белорусского фронта</u> - Иван Ильч Людников.<br><br>
                 <u>1 Прибалтийский фронт</u>
+                <p class="pict"><img src="1-ПБф.png" alt=""></p>
                 <br><br>
                 <u>51-я армия</u> в мае — июне 1944 года перегруппирована на западное направление. В
                 составе 1-го Прибалтийского фронта участвовала в операциях по освобождению
@@ -220,7 +221,7 @@
                 264-я штурмовая авиационная дивизия - Клобуков Евгений Васильевич 04.09.1943 -11.05.1945 <br> <br>
 
                 <u>2 Прибалтийский фронт</u><br>
-
+                <p class="pict"><img src="2-ПБф.png" alt=""></p>
                 <u>42-я армия</u> входила в состав 2-го Прибалтийского фронта. Перед началом Рижской
                 наступательной операции перед армией ставилась задача наступления в полосе
                 главного удара в направлении Нитауре с участка восточнее Эргли, преодолеть
@@ -257,11 +258,11 @@
                 освобождении Риги. <br>
                 7-й гвардейский стрелковый корпус - Кулешов Андрей Данилович 13.08.1944-06.04.1945 <br>
                 15-й гвардейский стрелковый корпус - Хоруженко Никифор Гордеевич 17.04.1943-02.11.1944 <br>
-                19-й гвардейский стрелковый корпус - Букштынович Михаил Фомич 18.02.1944-12.08.1944, Грибов Иван Владимирович 11.01.1945-02.04.1945 <br>
+                19-й гвардейский стрелковый корпус - Букштынович Михаил Фомич 18.02.1944-12.08.1944, <br>  Грибов Иван Владимирович 11.01.1945-02.04.1945 <br>
                 118 укреплённый район - Яловенко Василий Семенович 28.09.1943-31.12.1945 <br><br>
 
                 <u>3 Прибалтийский фронт</u><br><br>
-
+                <p class="pict"><img src="3-ПБф.png" alt=""></p>
                 <u>1-я ударная армия</u><br>
                 12 гвардейская стрелковый корпус - Буньков Степан Михайлович 30.07.1944 - 10.02.1945 <br>
                 14 гвардейский стрелковый корпус - Степаненко Павел Афиногенович 18.12.1942 - 09.05.1945 <br>
