--- a/Ход операции.html
+++ b/Ход операции.html
@@ -55,10 +55,10 @@
                         <a href="Ход операции.html" class="nav-link">Ход боевых действий</a>
                     </li>
                     <li class="nav-item">
-                        <a href="*" class="nav-link">Мемуары и фотографии</a>
+                        <a href="67 Армия.html">67 Армия</a>
                     </li>
                     <li class="nav-item">
-                        <a href="*" class="nav-link">Итоги операции и схемы</a>
+                        <a href="Итоги.html" class="nav-link">Итоги операции </a>
                     </li>
                     <li class="nav-item">
                         <a href="*" class="nav-link">Список литературы</a>
