--- a/Ход операции.html
+++ b/Ход операции.html
@@ -61,7 +61,7 @@
                         <a href="Итоги.html" class="nav-link">Итоги операции </a>
                     </li>
                     <li class="nav-item">
-                        <a href="*" class="nav-link">Список литературы</a>
+                        <a href="Список литературы.html" class="nav-link">Список литературы</a>
                     </li>
                 </ul>
             </div>
