--- a/Введение.html
+++ b/Введение.html
@@ -55,7 +55,7 @@
                         <a href="Ход операции.html" class="nav-link">Ход боевых действий</a>
                     </li>
                     <li class="nav-item">
-                        <a href="67 Армия.html">67 Армия</a>
+                        <a href="67 Армия.html" class="nav-link">67 Армия</a>
                     </li>
                     <li class="nav-item">
                         <a href="Итоги.html" class="nav-link">Итоги операции</a>
