--- a/Список литературы.html
+++ b/Список литературы.html
@@ -44,7 +44,7 @@
     <body>
         <nav class="navbar bg-secondary navbar-light navbar-expand-sm fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu">
-                <span class="navbar-toggler-icon"></span>
+cms%                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="main-menu">
                 <ul class="navbar-nav">
@@ -69,7 +69,26 @@
         <div class="fon">
             <div class="container">
                 <br><br>
+		<h1>Список литературы</h1> <br><br>
+		<p>
+		Книги <br>
+		1. БССА 01.09.1944<br>
+		2. Борьба за советскую Прибалтику в Великой Отечественной войне 1941-1945 в трёх книгах. Книга 3: завершающий этап. <br>Издательство: Рига: Лиесма - 1969г.<br>
+		3. Русский Архив: "Великая Отечественная." Том 15 (4-10). "Освобожение Прибалтики." <br> Сборник документов. -М.: Терра - 2001 г. <br>
+		4. Андрей Иванович Петренко "Прибалтика против фашизма. Советские прибалтийские дивизии в Великой Отечесвтенной войне." <br> Издательство Европа - 2005 год. <br>
+		5. Илья Мощанский "Наша Прибалтика. Освобождение прибалтийских республик СССР." <br> Издательство: "Вече" - 2010 г. <br>
+		6. А. Петренко "Прибалтийских дивизии Сталина." <br>2010 год.<br>
+		7. Архив ЦАМО <br><br>
 
+		Интернет ресурсы  <br>
+		1. Архивы ЦАМО <br>
+		<a href="https://mil.ru/winner_may/history/more.htm?id=11983690%40cmsArticle&ysclid=If2Ieh0xc262933893">Прибалтийская стратегичекая наступательная операция (14 сентября - 24 ноября 1944г.) : Министерстово обороны Российской Федерации </a> <br><br>
+		<a href="https://riga75.mil.ru/">Огни свободной Риги(riga75.mil.ru)</a> <br><br>
+
+		2. Память народа <br>
+		<a href="https://pamyat-naroda.ru/ops/rizhskaya-nastupatelnaya-operatsiya-1-etap/?ysckid=If2Ibjgjnr688995192">Память народа::Боевые операции::Рижская наступательная операция(1этап).(14.09.1944-28.09.1944)(pamyat-naroda.ru)</a>
+
+		</p>
 
 
                 
