--- a/Введение.html
+++ b/Введение.html
@@ -157,10 +157,10 @@
                 -техника: около 7 тыс. орудий и миномётов, свыше 1200 танков и штурмовых орудий,
                 400 боевых самолётов <br>
                 -численность: 56 дивизий и 3 бригады, свыше 700 тыс. Человек.
-                <u>Группы армий “Центр”</u> - Фердинанд Шернер.
+                <u>Группы армий “Центр”</u> - Фердинанд Шернер. <br>
                 18А - Генерал-полковник Георг Линдеман 16 января 1942 - 29 марта 1945; генерал пехоты Эренфрид Бёге 5 сентября1944 - 8 мая 1945 <br>
                 16А - Генерал-полковник Карл Хильперт 3 сентября 1944 - 10 марта 1945<br>
-                3ТА - Эрхард Раус  15 августа 1944 - 9 марта 1945<br>
+                3ТА - Эрхард Раус  15 августа 1944 - 9 марта 1945<br><br>
                 <u>Советских армий</u><br>
                 Численность<br>
                 -техника: 17 500 орудий и миномётов, 3000 танков и САУ, 2500 самолётов<br>
