--- a/Карты.html
+++ b/Карты.html
@@ -87,15 +87,16 @@
                     <li class="nav-item">
                         <a href="67 Армия.html" class="nav-link">67 Армия</a>
                     </li>
+                    <li>
+                        <a href="Карты.html" class="nav-link">Карты и фотографии</a>
+                    </li>
                     <li class="nav-item">
                         <a href="Итоги.html" class="nav-link">Итоги операции</a>
                     </li>
                     <li class="nav-item">
                         <a href="Список литературы.html" class="nav-link">Список литературы</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="Карты.html">Карты и фотографии</a>
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
