--- a/Ход операции.html
+++ b/Ход операции.html
@@ -58,6 +58,9 @@
                         <a href="67 Армия.html" class="nav-link">67 Армия</a>
                     </li>
                     <li class="nav-item">
+                        <a href="Карты.html" class="nav-link">Карты и фотографии</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="Итоги.html" class="nav-link">Итоги операции </a>
                     </li>
                     <li class="nav-item">
